--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "https://github.com/leozin00/myvillage-qrcode"
   },
-  "author": "Techiediaries <techiediaries9@gmail.com>",
+  "author": "Leonardo",
   "keywords": [
     "angular"
   ],
