--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/leozin00/myvillage-qrcode"
+    "url": "git+https://github.com/leozin00/myvillage-qrcode.git"
   },
   "author": "Leonardo",
   "keywords": [
